# deepqmc

./: .codespellignore  .exrc  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .travis.yml  .utf8-8.add  CHANGELOG.md  CONTRIBUTING.md  Combined - Copy.py  Combined.py  ELU H2+ new energycalc.py  ELU H2+ save.py  ELU H2.py  ELU He.py  ELU.py  ELU1D.py  E_min_save.npy  Examples.py  HMCtest.py  Hydrogen1D.py  Hydrogen23D.py  Hydrogen2plus3D - Copy.py  Hydrogen2plus3D.py  Hydrogen3D.py  Hydrogen3D_2.py  KernelSmoothedNetwork.py  LICENSE  LearnPysgmcmc Example .py  NN.py  README.md  Sampler - Funktioniert.py  Sampler.py  TestNewIdea.py  TestNewIdea1D.py  TestNewNewIdea1D.py  TestNewNewIdea2D - constant distance.py  TestNewNewIdea2D.py  VMC.py  (+9 more)
.github/workflows/: doc.yaml  lint.yaml  pre-commit.yaml  tests.yaml
MCMC stuff/: HMCtest - Copy.py  HMCtest.py  ImplementHMCH2+ELU.py  dynamics.py  testmetropolis.py
SaveSteps/: ELU H2+ save.py  HMC save.py
Smoothing/: KernelSmoothedNetwork.py
Testrun/: ELU H2+ erf.py  ELU He.py  Importance_sampling.py
calcs/qwalk/: .gitignore  qwalk.mk
data/h2/: discurve_H2_E_fci_6-31G.npy  discurve_H2_E_fci_ccpVQZ.npy  discurve_H2_E_hf_631G.npy  discurve_H2_E_hf_ccpVQZ.npy  discurve_H2_mean.npy
doc/: api.rst  cli.rst  conf.py  default.yaml  defaults.toml  defaults.yaml  index.rst  installation.rst  jax-api.rst  refs.rst  sloglindet.tex  tutorial.rst
doc/_templates/: layout.html
docs/: api.rst  conf.py  index.rst  refs.rst  tutorial.rst
docs/_static/: custom.css
notebooks/: dev-jh.py  dev-zs.ipynb  dev.ipynb  dev.py  dl-qmc-figures.ipynb  dl-qmc-jh-bfnet.ipynb  dl-qmc-jh.ipynb  dl-qmc-jh.py  tmp1blcx2zt  tmp1dytihoj  tmphdqodj58  zs-midterm.ipynb
pub/: .chktexrc  .gitignore  .utf8-8.add  Makefile  preamble.tex  preprint.tex  refs-zotero.bib  text.tex
runs/Feb01_11-24-59_DESKTOP-MS0144O/: projector_config.pbtxt
scripts/: Hydrogen1D.py  Hydrogen2plus3D.py  TestLap.py  TestNewIdea (JIC 3101).py  TestNewIdea.py  TestNewNewIdea1D.py  TestNewNewIdea2D - constant distance.py  TestNewNewIdea2D.py  prepare-all-systems.py  prepare_runs.py  run.py  run_common_configs.py  test.py
scripts/Elu/: ELU H2+ new energycalc.py  ELU H2.py  ELU1D.py
scripts/MCMC stuff/: HMC.py  HMCtest - Copy.py  LearnPyMc3 Example.py  LearnPyMc3.py  LearnPysgmcmc Example .py  dynamics.py
scripts/Smoothing/: Combined - Copy.py  compare_smooth_net_smooth_variance.py
scripts/Testrun/: ELU He.py  HMC.py
src/deepqmc/: __init__.py  __main__.py  analysis.py  app.py  batch_operations.py  cli.py  clip.py  defaults.py  errors.py  evaluate.py  ewm.py  exceptions.py  fit.py  force.py  geom.py  grad.py  hamil.py  hkext.py  io.py  kfacext.py  log.py  loss.py  molecule.py  observable.py  optimizer.py  oscillator_strength.py  parallel.py  physics.py  plugins.py  pretrain.py  sampling.py  torchext.py  train.py  types.py  units.py  utils.py  validate_kwargs.py
src/dlqmc/: Examples.py  NN.py  Sampler.py  analysis.py  ansatz.py  default-params.toml  errors.py  fit.py  geom.py  grad.py  gto.py  nn.py  physics.py  sampling.py  stats.py  systems.toml  torchext.py  train.py  utils.py
tests/: conftest.py  test_app.py  test_bfnet.py  test_cli.py  test_det.py  test_gnn.py  test_gto.py  test_hamil.py  test_molecule.py  test_paulinet.py  test_physics.py  test_potential.py  test_regression.py  test_sampling.py  test_torchext.py  test_train.py  test_utils.py  test_wf.py  test_wfnet.py
tests/conf/: ansatz.yaml  gnn.yaml
tests/test_gnn/: test_embedding.npz  test_embedding__.npz  test_embedding_edge_feat_kwargs___difference___False__.npz  test_embedding_layer_kwargs___deep_w___True__.npz  test_embedding_layer_kwargs___residual___False__.npz  test_embedding_layer_kwargs___shared_g___True__.npz  test_embedding_layer_kwargs___shared_h___True__.npz  test_graph_edge_builder_mask_self_False_.npz  test_graph_edge_builder_mask_self_True_.npz  test_molecular_graph_edge_builder.npz
tests/test_hamil/: test_init_Molecular_.npz  test_init_Molecular_PP_.npz  test_init_sample_Molecular_.npz  test_init_sample_Molecular_PP_.npz  test_init_sample_QHO_.npz  test_local_energy_Molecular_.npz  test_local_energy_Molecular_PP_.npz  test_local_energy_QHO_.npz
tests/test_molecule/: test_from_name_C_.npz  test_from_name_C_ccECP_.npz  test_from_name_H10_.npz  test_from_name_H10_None_.npz  test_from_name_H2O_.npz  test_from_name_H2O_None_.npz  test_from_name_LiH_.npz  test_from_name_LiH_None_.npz  test_from_name_NH3_.npz  test_from_name_NH3_None_.npz  test_from_name_ScO_.npz  test_from_name_ScO_ccECP_.npz  test_from_name_bicyclobutane_.npz  test_from_name_bicyclobutane_None_.npz
tests/test_paulinet/: test_grad_psi___.npz  test_grad_psi__jastrow_False_.npz  test_grad_psi_backflow_channels_2__.npz  test_grad_psi_confs___0__1__0__1____0__2__0__2____.npz  test_laplace_psi___.npz  test_laplace_psi__jastrow_False_.npz  test_laplace_psi_backflow_channels_2__.npz  test_laplace_psi_confs___0__1__0__1____0__2__0__2____.npz  test_psi___.npz  test_psi__jastrow_False_.npz  test_psi_backflow_channels_2__.npz  test_psi_confs___0__1__0__1____0__2__0__2____.npz
tests/test_physics/: test_pseudo_potentials_C_None_.npz  test_pseudo_potentials_C_bfd_.npz  test_pseudo_potentials_C_ccECP_.npz  test_pseudo_potentials_LiH_None_.npz  test_pseudo_potentials_LiH_bfd_.npz  test_pseudo_potentials_LiH_ccECP_.npz  test_pseudo_potentials_ScO_None_.npz  test_pseudo_potentials_ScO_bfd_.npz  test_pseudo_potentials_ScO_ccECP_.npz
tests/test_potential/: test_pseudo_potentials_C_None_.npz  test_pseudo_potentials_C_bfd_.npz  test_pseudo_potentials_C_ccECP_.npz  test_pseudo_potentials_LiH_None_.npz  test_pseudo_potentials_LiH_bfd_.npz  test_pseudo_potentials_LiH_ccECP_.npz  test_pseudo_potentials_ScO_None_.npz  test_pseudo_potentials_ScO_ccECP_.npz
tests/test_regression/: test_paulinet__.csv  test_paulinet_backflow_channels_2_.csv  test_paulinet_backflow_transform_add_.csv  test_paulinet_backflow_transform_both_.csv  test_paulinet_basis_6_31g_.csv  test_paulinet_ee__.csv  (+27 more)
utils/: init-run.sh  prepare-runs.py  prepare_runs.py  run.sh
(+350 files in other folders)
