[build-system]
requires = [
    "poetry-core@https://github.com/python-poetry/poetry-core/archive/325312c016d69189ac93c945ba0c1b69296c5e54.zip",
    "poetry-dynamic-versioning>=0.12.3"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "deepqmc"
version = "0.0.0"
description = "Deep-learning quantum Monte Carlo for electrons in real space"
authors = [
    "Jan Hermann <jan.hermann@fu-berlin.de>",
    "Zeno Schätzle <zenoone@physik.fu-berlin.de>",
]
readme = "README.md"
packages = [
    { include = "deepqmc", from = "src" },
]
repository = "https://github.com/deepqmc/deepqmc"
documentation = "https://deepqmc.github.io"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
uncertainties = "^3.1.2"
numpy = "^1.16"
torch = "^1.10"
scipy = { version = "^1", optional = true }
pyscf = { version = "^2", optional = true }
pytest = { version = ">=5 <7", optional = true }
pytest-regressions = { version = "^2.2", optional = true, extras = ["num"] }
coverage = { version = ">=4.5 <6", optional = true }
tensorboard = { version = "^2", optional = true }
tqdm = { version = "^4", optional = true }
sphinx = { version = "^2.2", optional = true }
Pillow = { version = ">=7 <9", optional = true }
sphinxcontrib-katex = { version = "^0.8", optional = true }
click = { version = "^8", optional = true }
tomlkit = { version = "^0.7", optional = true }
docutils = { version = "<0.18", optional = true }
# 0.18 seems to be crashing sphinx 2.4.4
hydra-core = { git = "https://github.com/facebookresearch/hydra.git", rev = "22b8bcbcfa14193eeaa5a09f0a370c0578b96184", optional = true }

[tool.poetry.extras]
wf = ["scipy", "pyscf"]
test = ["pytest", "pytest-regressions", "coverage"]
train = ["tensorboard", "tqdm", "Pillow"]
cli = ["click", "tomlkit"]
app = ["hydra-core"]
doc = ["sphinx", "sphinxcontrib-katex", "docutils"]
all = ["scipy", "pyscf", "pytest", "pytest-regressions", "coverage", "tensorboard", "tqdm", "Pillow", "click", "tomlkit"]

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
flake8-bugbear = ">=18.8"
flake8-comprehensions = ">=1.4"
flake8-quotes = ">=2"
black = ">=20-beta.0"
pep8-naming = ">=0.7"
isort = "^4.3"
pydocstyle = "^5.0.1"

[tool.poetry.scripts]
deepqmc = "deepqmc.cli:cli"
"deepqmc.app" = "deepqmc.app:cli"

[tool.poetry-dynamic-versioning]
enable = true
pattern = '^(?P<base>\d+\.\d+\.\d+)$'

[tool.black]
target-version = ["py37"]
skip-string-normalization = true
